--- a/docs/docs/classic-ml/tracking/index.mdx
+++ b/docs/docs/classic-ml/tracking/index.mdx
@@ -1,7 +1,6 @@
 ---
 sidebar_label: Overview
 sidebar_position: 0
-pagination_label: MLflow Tracking
 ---
 
 import Link from "@docusaurus/Link";
@@ -88,6 +87,153 @@ If you want to log your runs to a different location, such as a remote database 
 your team, follow the instructions in the [Set up MLflow Tracking Environment](#tracking-setup) section.
 :::
 
+### Searching Logged Models Programmatically \{#search_logged_models}
+
+MLflow 3.0 introduces powerful model search capabilities through <APILink fn="mlflow.search_logged_models" />. This API allows you to find specific models across your experiments based on performance metrics, parameters, and model attributes using SQL-like syntax.
+
+```python
+import mlflow
+
+# Find high-performing models across experiments
+top_models = mlflow.search_logged_models(
+    experiment_ids=["1", "2"],
+    filter_string="metrics.accuracy > 0.95 AND params.model_type = 'RandomForest'",
+    order_by=[{"field_name": "metrics.f1_score", "ascending": False}],
+    max_results=5,
+)
+
+# Get the best model for deployment
+best_model = mlflow.search_logged_models(
+    experiment_ids=["1"],
+    filter_string="metrics.accuracy > 0.9",
+    max_results=1,
+    order_by=[{"field_name": "metrics.accuracy", "ascending": False}],
+    output_format="list",
+)[0]
+
+# Load the best model directly
+loaded_model = mlflow.pyfunc.load_model(f"models:/{best_model.model_id}")
+```
+
+**Key Features:**
+- **SQL-like filtering**: Use `metrics.`, `params.`, and attribute prefixes to build complex queries
+- **Dataset-aware search**: Filter metrics based on specific datasets for fair model comparison
+- **Flexible ordering**: Sort by multiple criteria to find the best models
+- **Direct model loading**: Use the new `models:/<model_id>` URI format for immediate model access
+
+For comprehensive examples and advanced search patterns, see the [Search Logged Models Guide](/ml/search-logged-models).
+
+### Querying Runs Programmatically \{#tracking_query_api}
+
+You can also access all of the functions in the Tracking UI programmatically with <APILink fn="mlflow.client.MlflowClient">MlflowClient</APILink>.
+
+For example, the following code snippet search for runs that has the best validation loss among all runs in the experiment.
+
+```python
+client = mlflow.tracking.MlflowClient()
+experiment_id = "0"
+best_run = client.search_runs(
+    experiment_id, order_by=["metrics.val_loss ASC"], max_results=1
+)[0]
+print(best_run.info)
+# {'run_id': '...', 'metrics': {'val_loss': 0.123}, ...}
+```
+
+## Tracking Models
+
+MLflow 3.0 introduces enhanced model tracking capabilities that allow you to log multiple model checkpoints within a single run and track their performance against different datasets. This is particularly useful for deep learning workflows where you want to save and compare model checkpoints at different training stages.
+
+### Logging Model Checkpoints
+
+You can log model checkpoints at different steps during training using the `step` parameter in model logging functions. Each logged model gets a unique model ID that you can use to reference it later.
+
+```python
+import mlflow
+import mlflow.pytorch
+
+with mlflow.start_run() as run:
+    for epoch in range(100):
+        # Train your model
+        train_model(model, epoch)
+
+        # Log model checkpoint every 10 epochs
+        if epoch % 10 == 0:
+            model_info = mlflow.pytorch.log_model(
+                pytorch_model=model,
+                name=f"checkpoint-epoch-{epoch}",
+                step=epoch,
+                input_example=sample_input,
+            )
+
+            # Log metrics linked to this specific model checkpoint
+            accuracy = evaluate_model(model, validation_data)
+            mlflow.log_metric(
+                key="accuracy",
+                value=accuracy,
+                step=epoch,
+                model_id=model_info.model_id,  # Link metric to specific model
+                dataset=validation_dataset,
+            )
+```
+
+### Linking Metrics to Models and Datasets
+
+MLflow 3.0 allows you to link metrics to specific model checkpoints and datasets, providing better traceability of model performance:
+
+```python
+# Create a dataset reference
+train_dataset = mlflow.data.from_pandas(train_df, name="training_data")
+
+# Log metric with model and dataset links
+mlflow.log_metric(
+    key="f1_score",
+    value=0.95,
+    step=epoch,
+    model_id=model_info.model_id,  # Links to specific model checkpoint
+    dataset=train_dataset,  # Links to specific dataset
+)
+```
+
+### Searching and Ranking Model Checkpoints
+
+Use <APILink fn="mlflow.search_logged_models" /> to search and rank model checkpoints based on their performance metrics:
+
+```python
+# Search for all models in a run, ordered by accuracy
+ranked_models = mlflow.search_logged_models(
+    filter_string=f"source_run_id='{run.info.run_id}'",
+    order_by=[{"field_name": "metrics.accuracy", "ascending": False}],
+    output_format="list",
+)
+
+# Get the best performing model
+best_model = ranked_models[0]
+print(f"Best model: {best_model.name}")
+print(f"Accuracy: {best_model.metrics[0].value}")
+
+# Load the best model for inference
+loaded_model = mlflow.pyfunc.load_model(f"models:/{best_model.model_id}")
+```
+
+### Model URIs in MLflow 3.0
+
+MLflow 3.0 introduces a new model URI format that uses model IDs instead of run IDs, providing more direct model referencing:
+
+```python
+# New MLflow 3.0 model URI format
+model_uri = f"models:/{model_info.model_id}"
+loaded_model = mlflow.pyfunc.load_model(model_uri)
+
+# This replaces the older run-based URI format:
+# model_uri = f"runs:/{run_id}/model_path"
+```
+
+This new approach provides several advantages:
+- **Direct model reference**: No need to know the run ID and artifact path
+- **Better model lifecycle management**: Each model checkpoint has its own unique identifier
+- **Improved model comparison**: Easily compare different checkpoints within the same run
+- **Enhanced traceability**: Clear links between models, metrics, and datasets
+
 ## Tracking Datasets
 
 MLflow offers the ability to track datasets that are associated with model training events. These metadata associated with the Dataset can be stored through the use of the <APILink fn="mlflow.log_input" /> API.
@@ -115,22 +261,6 @@ Alternatively, the [MLflow Tracking Server](#tracking_server) serves the same UI
 storage of run artifacts. In that case, you can view the UI at `http://<IP address of your MLflow tracking server>:5000`
 from any machine that can connect to your tracking server.
 
-## Querying Runs Programmatically \{#tracking_query_api}
-
-You can also access all of the functions in the Tracking UI programmatically with <APILink fn="mlflow.client.MlflowClient">MlflowClient</APILink>.
-
-For example, the following code snippet search for runs that has the best validation loss among all runs in the experiment.
-
-```python
-client = mlflow.tracking.MlflowClient()
-experiment_id = "0"
-best_run = client.search_runs(
-    experiment_id, order_by=["metrics.val_loss ASC"], max_results=1
-)[0]
-print(best_run.info)
-# {'run_id': '...', 'metrics': {'val_loss': 0.123}, ...}
-```
-
 ## Set up the MLflow Tracking Environment \{#tracking-setup}
 
 :::note
@@ -151,14 +281,19 @@ You can call MLflow Tracking APIs in your ML code to log runs and communicate wi
 The backend store persists various metadata for each [Run](#runs), such as run ID, start and end times, parameters, metrics, etc.
 MLflow supports two types of storage for the backend: **file-system-based** like local files and **database-based** like PostgreSQL.
 
-#### [Artifact Store](/ml/tracking/artifacts-stores) \{#artifact-stores}
+Additionally, if you are interfacing with a managed service (such as Databricks or Azure Machine Learning), you will be interfacing with a
+REST-based backend store that is externally managed and not directly accessible.
+
+#### [Artifact Store](/ml/tracking/artifact-stores) \{#artifact-stores}
 
 Artifact store persists (typically large) artifacts for each run, such as model weights (e.g. a pickled scikit-learn model),
 images (e.g. PNGs), model and data files (e.g. [Parquet](https://parquet.apache.org) file). MLflow stores artifacts ina a
 local file (`mlruns`) by default, but also supports different storage options such as Amazon S3 and Azure Blob Storage.
 
-For models which are logged as MLflow artifacts, you can refer the model through a model URI of format: `runs:/<run_id>/<artifact_path>`,
-the 'run_id' is the run which the model is logged to, and the 'artifact_path' is the relative path of the artifact.
+For models which are logged as MLflow artifacts, you can refer the model through a model URI of format: `models:/<model_id>`,
+where 'model_id' is the unique identifier assigned to the logged model. This replaces the older `runs:/<run_id>/<artifact_path>` format
+and provides more direct model referencing.
+
 If the model is registered in the [MLflow Model Registry](/ml/model-registry),
 you can also refer the the model through a model URI of format: `models:/<model-name>/<model-version>`,
 see [MLflow Model Registry](/ml/model-registry/#model-uri) for details.
@@ -167,7 +302,7 @@ see [MLflow Model Registry](/ml/model-registry/#model-uri) for details.
 
 MLflow Tracking Server is a stand-alone HTTP server that provides REST APIs for accessing backend and/or artifact store.
 Tracking server also offers flexibility to configure what data to server, govern access control, versioning, and etc. Read
-[MLflow Tracking Server documentation](/tracking/server) for more details.
+[MLflow Tracking Server documentation](/ml/tracking/server) for more details.
 
 ### Common Setups \{#tracking_setup}
 
@@ -195,7 +330,7 @@ The following diagram and table show a few common setups for the MLflow Tracking
     <tr>
       <th>Use Case</th>
       <td>By default, MLflow records metadata and artifacts for each run to a local directory, `mlruns`. This is the simplest way to get started with MLflow Tracking, without setting up any external server, database, and storage.</td>
-      <td>The MLflow client can interface with a SQLAlchemy-compatible database (e.g., SQLite, PostgreSQL, MySQL) for the [backend](/tracking/backend-stores). Saving metadata to a database allows you cleaner management of your experiment data while skipping the effort of setting up a server.</td>
+      <td>The MLflow client can interface with a SQLAlchemy-compatible database (e.g., SQLite, PostgreSQL, MySQL) for the [backend](/ml/tracking/backend-stores). Saving metadata to a database allows you cleaner management of your experiment data while skipping the effort of setting up a server.</td>
       <td>MLflow Tracking Server can be configured with an artifacts HTTP proxy, passing artifact requests through the tracking server to store and retrieve artifacts without having to interact with underlying object store services. This is particularly useful for team development scenarios where you want to store artifacts and experiment metadata in a shared location with proper access control.</td>
     </tr>
     <tr>
@@ -277,7 +412,7 @@ Yes, while it is best practice to have the MLflow Tracking Server as a proxy for
 if you are using it for personal projects or testing. You can achieve this by following the workaround below:
 
 1. Set up artifacts configuration such as credentials and endpoints, just like you would for the MLflow Tracking Server.
-   See [configure artifact storage](/ml/tracking/artifacts-stores#artifacts-store-supported-storages) for more details.
+   See [configure artifact storage](/ml/tracking/artifact-stores#artifacts-store-supported-storages) for more details.
 2. Create an experiment with an explicit artifact location,
 
 ```python
